optinum: finished lecture 2019-10-21

--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_1_1_aufgabenstellungGrundbegriffe.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_1_1_aufgabenstellungGrundbegriffe.tex
@@ -11,7 +11,7 @@ Man nennt
 	\item ein $x \in  G$ \begriff{zulässigen Punkt} (oder zulässige Lösung).
 \end{itemize}
 Ein zulässiger Punkt $x^\ast \in G$ heißt \begriff{optimal} (oder Lösung oder optimale Lösung), wenn für alle $x \in G$ die Ungleichung
-\begin{equation}
+\begin{equation} \label{eq: 1_2_optimal}
 	f(x^\ast) \le f(x)
 \end{equation}
 gilt. Falls das Problem \eqref{eq: oa} lösbar ist, so wird mit $f^\ast = f(x^\ast)$ der \begriff{Optimalwert} bezeichnet. Das Problem \eqref{eq: oa} ist ein
@@ -27,7 +27,7 @@ und außerdem eine
 \end{itemize}
 
 Gilt in \eqref{eq: oa} $f(x) = \trans{c} x$ für ein $c \in \Rn$ und ist $G$ durch lineare Bedingungen beschreibbar, so heißt \eqref{eq: oa} \begriff{linear}. In diesem Fall lässt sich \eqref{eq: oa} schreiben als
-\begin{equation}
+\begin{equation} \label{eq: 1_3_lineareOA}
 	\trans{c} x \to \min \quad \bei Ax = a, Bx \le b
 \end{equation}
 mit geeigneten Matrizen $A$ und $B$ sowie Vektoren $a$ und $b$.
