--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_1_3_beispieleDiskreteOptimierung.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_1_3_beispieleDiskreteOptimierung.tex
@@ -69,11 +69,58 @@ ist.
 	
 	Es gibt im Allgemeinen exponentiell viele zulässige Packungen $a^j$ ($j \in J$), deren Koeffizienten allesamt in den Nebenbedingungen benötigt werden.
 	
-	Eine Relaxation erhält man zum Beispiel durch $x_j \in \R_+$. Diese stetige Relaxation ist sehr gut; man vermutet, dass 
+	Eine Relaxation erhält man zum Beispiel durch $x_j \in \R_+$. Diese stetige Relaxation ist sehr gut; man vermutet, dass folgende Bedingung gilt:
 	\begin{equation*}
 		f^{GG, \ast} - f^{GG, \ast}_\text{relax} < 2
 	\end{equation*}
-	gilt.
 \end{description}
 
 Erfreulicherweise gibt es zum Gilmore-Gomory-Modell äquivalente Formulierungen, die mit einer polynomiellen Zahl von Variablen arbeiten und eine ebenso gute stetige Relaxation besitzen (z.B. Flussmodelle).
+
+
+\subsection{Standortplanung}
+Ein Dienstleister möchte neue Filialen aufbauen, um seine Kunden $k \in K \defeq \menge{1, \dots , m}$ zu versorgen. Dabei sind aus der Menge $S \defeq \menge{1, \dots , n}$ mögliche Standorte, die neuen Standorte so auszuwählen, dass der Bedarf aller Kunden befriedigt wird und die Gesamtkosten minimial sind.
+
+Wir benötigen
+\begin{itemize}[nolistsep, topsep=-\parskip]
+	\item $c_s > 0$ \dots Fixkosten für den Aufbau von Standort $s \in S$
+	\item $d_{ks} > 0$ \dots Kosten, um den Kunden $k \in K$ (vollständig) von Standort $s \in S$ zu beliefern.
+\end{itemize}
+
+Variablen:
+\begin{itemize}[nolistsep, topsep=-\parskip]
+	\item $x_s = \begin{cases} 1 & \text{wenn Standort } s \in S \text{ gebaut wird} \\ 0 & \text{sonst} \end{cases}$ 
+	\item $y_{ks} \ge 0$ \dots Anteil des Bedarfs des Kunden $k \in K$, der vom Standort $s \in S$ bedient wird (implizit: $y_{ks} \in [0,1]$)
+\end{itemize}
+
+Modell zur Standortplanung:
+\begin{equation*}
+	f(x,y) = \underbrace{\sum_{s \in S} x_s c_s}_{\text{Fixkosten}}  + \underbrace{\sum_{s \in S} \sum_{k \in K} y_{ks} d_{ks}}_{\text{variable Kosten}} \to \min
+\end{equation*}
+bei
+\begin{equation*}
+	x_s = \sum_{k \in K} y_{ks} \quad \und \quad x_s \in \menge{0,1} \quad \und \quad \underbrace{y_{ks} \ge 0}_{\bzw y_{ks} \in [0,1]} \qquad (k \in K, s \in S)
+\end{equation*}
+
+\subsection{Quadratisches Zuordnungsproblem}
+
+Es sollen $n$ Personen auf $n$ Räume verteilt werden. Person $i$ muss Person $j$ $c_{ij}$ mal am Tag treffen. Außerdem habe Büro $k$ von Büro $\ell$ die Entfernung $d_{k \ell}>0$. Wird Person $i$ das Büro $k$ zugewiesen und Person $j$ das Büro $\ell$, so ergibt sich eine Gesamtwegstrecke von $2 c_{ij} d_{kl}$ (beachte Hin- und Rückweg). Gesucht ist die wegminimale Belegung der Büros.
+
+Variablen: $x_{ik} = \begin{cases}
+	1 & \text{wenn Person $i$ das Büro $k$ zugewiesen wird} \\ 0 & \text{sonst}
+	\end{cases} \quad (i,k) \in \menge{1, \dots , n} \times \menge{1, \dots , n}$
+	
+Zielfunktion:
+\begin{equation*}
+	f(x) = \sum_{i=1}^n \sum_{k=1}^n \sum_{j=1, j \neq i}^n \sum_{\ell =1, \ell \neq k}^n x_{j \ell} x_{i k} * 2c_{ij} d_{kl} \to \min
+\end{equation*}
+bei
+\begin{equation*}
+	\begin{alignedat}{3}
+	\sum_{i=1}^n x_{ik} &= 1 \quad &&(k = 1, \dots, n) \quad &&\text{Büro $k$ bekommt genau einen Einwohner} \\
+	\sum_{k=1}^n x_{ik} &= 1 &&(i = 1, \dots, n) &&\text{Person $i$ bekommt genau ein Büro} \\
+	x_{ik} \in &\menge{0,1} \quad &&(i,k) \in \menge{1, \dots , n} \times \menge{1, \dots , n} &&
+	\end{alignedat}
+\end{equation*}
+
+Weitere Beispiele sind in der Vorlesung ''Diskrete Optimierung`` (Master Mathe) zu finden..
