--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -58,7 +58,7 @@
 
 
 \undef\folge
-\NewDocumentCommand{\folge}{m O{n \in \N}}{\left( #1 \right)_{#2}}
+\NewDocumentCommand{\folge}{m m}{\left\{ #1 \right\}_{#2}}
 \renewcommand{\complement}{\mathsf{C}}
 
 \newcommand{\widesim}[1][2.5]{
@@ -80,6 +80,10 @@
 \input{optinum_1_1_aufgabenstellungGrundbegriffe}
 \input{optinum_1_2_beispieleKontinuierlicheOptimierung}
 \input{optinum_1_3_beispieleDiskreteOptimierung}
+
+\chapter{Grundlagen}
+\label{chapter_2_grundlagen}
+\input{optinum_2_1_existenzLoesungen}
 
 
 \end{document}
