--- a/texmf/tex/latex/maththeorems3MathTUD.sty
+++ b/texmf/tex/latex/maththeorems3MathTUD.sty
@@ -190,6 +190,33 @@
 ]{lemma}{Lemma}
 
 %======================================================
+% AUSSAGE
+
+\newmdtheoremenv[%
+	%style=boxedtheorem,%
+	%backgroundcolor=none,%
+	linecolor=cdindigo!50,%
+	%innertopmargin=\boxskip,%
+	%innerbottommargin=\boxskip,%
+	innerleftmargin=0pt,%
+	outerlinewidth=5pt,%
+	topline=false,%
+	rightline=true,%
+	leftline=false,%
+	bottomline=false,%
+	%innertopmargin=3pt,%
+	%innerbottommargin=3pt,%
+	%leftmargin=-10pt,%
+	%rightmargin=-10pt,%
+	%frametitlefont=\osfamily\bfseries,%
+	%skipabove=5pt,%
+	%skipbelow=5pt,%
+	skipabove=6pt,%
+	skipbelow=6pt,%
+	nobreak,%
+]{aussage}{Aussage}
+
+%======================================================
 % PROPOSITION
 
 \newmdtheoremenv[%
