stochv: update until 31 oct 19

--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_1_zentraleFragestellungen.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_1_zentraleFragestellungen.tex
@@ -10,7 +10,7 @@
 	\begin{itemize}[nolistsep, leftmargin=*, topsep=-\parskip]
 		\item Recht in drei Monaten 100.000 GBP gegen 125.000 EUR zu erhalten (Call-Option; underlying: Wechselkurs GBP in EUR)
 		\item Recht innerhalb des nächsten Jahres 100.000 MWh elektrische Energie zum Preis von 30 EUR/MWh zu konsumieren mit Mindestabnahme 50.000 MWh (Swing-Option; underlying: Strompreis)
-		\item Kauf- und Verkaufsoptionen azf Aktien (underlying: Aktienkurs)
+		\item Kauf- und Verkaufsoptionen auf Aktien (underlying: Aktienkurs)
 	\end{itemize}
 \end{beispiel}
 
