--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_2_mathematischesFinanzmodell.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_2_mathematischesFinanzmodell.tex
@@ -2,7 +2,7 @@
 
 Wir betrachten
 \begin{enumerate}[leftmargin=*]
-	\item einen Wahrscheinlichkeitsraum $\Omega, \F, \P)$, später auch weitere Maße $\Q, \dots$ auf demselben Maßraum $(\Omega, \F)$. Die $\omega \in \Omega$ werden als \begriff{Elementarereignisse} oder \begriff{''Szenarien``} bezeichnet.
+	\item einen Wahrscheinlichkeitsraum $(\Omega, \F, \P)$, später auch weitere Maße $\Q, \dots$ auf demselben Maßraum $(\Omega, \F)$. Die $\omega \in \Omega$ werden als \begriff{Elementarereignisse} oder \begriff{''Szenarien``} bezeichnet.
 	\item Zeitachse $I$ entweder $I = \menge{t_1, t_2, \dots t_N = T}$ ($N$-Perioden-Modell; diskretes Modell) oder $I = [O,T]$ (stetiges Modell)
 	Dabei wird $T$ als \begriff{Zeithorizont} bezeichnet.
 	\begin{definition}[stochastischer Prozess]
@@ -18,7 +18,7 @@ Wir betrachten
 	\end{itemize}
 	\item ~\vspace{-2em}
 	 \begin{definition}[Filtration]
-	 	Eine Filtration ist eine Folge von $\sigma$-Alegbren $\folge{\F_t}{t \in I}$ mit der Eigenschaft
+	 	Eine Filtration ist eine Folge von $\sigma$-Algebren $\folge{\F_t}{t \in I}$ mit der Eigenschaft
 	 	\begin{equation*}
 	 	\F_s \subseteq \F_t \quad \forall s,t \in I, s \le t \qquad \und \qquad \F_t \subseteq \F \quad \forall t \in I
 	 	\end{equation*}
