--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -85,5 +85,6 @@
 \input{stochv_1_2_mathematischesFinanzmodell}
 \input{stochv_1_3_anleihenBeispieleDerivate}
 \input{stochv_1_4_replikationsArbitrage}
+\input{stochv_1_5_bedingterErwartungswertMartingale}
 
 \end{document}
