--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_local_changes.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_local_changes.tex
@@ -13,7 +13,7 @@
 \pretocmd{\chapter}{\setcounter{section}{0}}{}{}
 
 % automatic reset of equation counter in each section
-\pretocmd{\section}{\setcounter{equation}{0}}{}{}
+\pretocmd{\chapter}{\setcounter{equation}{0}}{}{}
 
 %\counterwithin{theorem}{chapter}
 %\counterwithin{definition}{chapter}
