--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -66,6 +66,7 @@
 }
 
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -84,6 +85,8 @@
 \chapter{Grundlagen}
 \label{chapter_2_grundlagen}
 \input{optinum_2_1_existenzLoesungen}
+\input{optinum_2_2_optimalitaetsbedingungen}
+\input{optinum_2_3_lemmaVonFarkas}
 
 
 \end{document}
