hana: updated until 04 nov 19

--- a/Math-Ba-HANA/HANA_Uebung/hana_uebungen-1.tex
+++ b/Math-Ba-HANA/HANA_Uebung/hana_uebungen-1.tex
@@ -1,6 +1,4 @@
-\begin{exercisePage}[Topologische Räume]
-%
-%\setcounter{taskcount}{5}
+\begin{exercisePage}[Topologische Räume][15/15]
 %
 % Aufgabe 1
 \begin{exercise}
@@ -10,10 +8,6 @@
 		\item  Ist $\tau$ die von einer Metrik auf $\Rn$ erzeugte Standardtopologie?
 	\end{enumerate}
 \end{exercise}
-
-\newlength{\zulength}
-\settowidth{\zulength}{(zu a)}
-\addtolength{\zulength}{1em}
 
 \begin{enumerate}[leftmargin=\zulength, label=(zu \alph*)]
 	\item Seien $x,y \in \Rn$ beliebig. Definiere $\epsilon \defeq \frac{1}{2} \dist{x}{y}$. Dann gilt für die Umgebungen $U = B_\epsilon(x)$ von $u$ und $V = B_\epsilon(y)$ von $v$ nach Konstruktion stets $U \cap V = \emptyset$, d.h. $\Rn$ ist separiert bzgl. der euklidischen Topologie.
