new operator rg

--- a/texmf/tex/latex/mathoperatorsMathTUD.sty
+++ b/texmf/tex/latex/mathoperatorsMathTUD.sty
@@ -265,6 +265,7 @@
 %%%%%% R
 \DeclareMathOperator{\rd}{rd}       % ?
 \DeclareMathOperator{\rk}{rk}       % Rank of a matrix
+\DeclareMathOperator{\rg}{rg}
 \DeclareMathOperator{\rot}{rot}     % Rotation (Curl)
 \DeclareMathOperator{\rang}{rang}   % Matrix Rank
 
