--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -88,5 +88,10 @@
 \input{optinum_2_2_optimalitaetsbedingungen}
 \input{optinum_2_3_lemmaVonFarkas}
 
+\chapter{Lineare Optimierung}
+\label{chapter_3_lineareOptimierung}
+\input{optinum_3_0_intro}
+\input{optinum_3_1_basisloesungenEcken}
+
 
 \end{document}
