--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -16,7 +16,7 @@
 \usepackage[smallequationskip]{../../texmf/tex/latex/mathworkMathTUD}
 
 \usepackage{../../texmf/tex/latex/mathoperatorsMathTUD}
-\usepackage[includechapter]{../../texmf/tex/latex/maththeorems3MathTUD}
+\usepackage{optinum_theorem}
 
 \usepackage{../../texmf/tex/latex/titlepageMathTUD}
 \usepackage{../../texmf/tex/latex/graphicsMathTUD}
@@ -24,7 +24,7 @@
 \input{./optinum_local_headings}
 \input{./optinum_local_changes}
 
-\usepackage{../../texmf/tex/latex/referencesMathTUD}
+%\usepackage{../../texmf/tex/latex/referencesMathTUD}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -92,6 +92,7 @@
 \label{chapter_3_lineareOptimierung}
 \input{optinum_3_0_intro}
 \input{optinum_3_1_basisloesungenEcken}
+\input{optinum_3_2_primalesSimplexverfahren}
 
 
 \end{document}
