--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -93,5 +93,6 @@
 \label{chapter_2_crr}
 \input{stochv_2_0_einfuehrung}
 \input{stochv_2_1_anlagestrategien}
+\input{stochv_2_2_replikationCRR}
 
 \end{document}
