--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -16,7 +16,7 @@
 \usepackage[smallequationskip]{../../texmf/tex/latex/mathworkMathTUD}
 
 \usepackage{../../texmf/tex/latex/mathoperatorsMathTUD}
-\usepackage{../../texmf/tex/latex/maththeorems2MathTUD}
+\usepackage{./stochv_theorem}
 
 \usepackage{../../texmf/tex/latex/titlepageMathTUD}
 \usepackage{../../texmf/tex/latex/graphicsMathTUD}
@@ -94,5 +94,6 @@
 \input{stochv_2_0_einfuehrung}
 \input{stochv_2_1_anlagestrategien}
 \input{stochv_2_2_replikationCRR}
+\input{stochv_2_3_martingalmassArbitrageCRR}
 
 \end{document}
