--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_theorem.sty
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_theorem.sty
@@ -56,47 +56,17 @@
 \ProcessOptionsX
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\skiparound}{10pt}
+\newcounter{thmcount}
+\counterwithin{thmcount}{chapter}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Theorem
-
-\newenvironment{theorem}[2][]{%
-  \refstepcounter{themcount}%
-  \ifstrempty{#1}%
-  { \mdfsetup{%
-      frametitle={%
-      \tikz[baseline=(current bounding box.east),outer sep=0pt]
-      \node[anchor=east,rectangle,fill=cddarkblue!90]
-      {\strut \color{white} \osfamily Theorem~\thethemcount};}}
-  }%
-  { \mdfsetup{%
-      frametitle={%
-      \tikz[baseline=(current bounding box.east),outer sep=0pt]
-      \node[anchor=east,rectangle,fill=cddarkblue!90]
-      {\strut \color{white} \osfamily Theorem~\thethemcount~(#1)};}}%
-  }%
-  \mdfsetup{
-    innertopmargin=6pt,
-    linecolor=cddarkblue!90,%
-    linewidth=2pt,
-    backgroundcolor=cdblue!10,
-    topline=true,%
-    frametitleaboveskip=\dimexpr-\ht\strutbox\relax
-  }
-  \begin{mdframed}[]\relax%
-  \label{#2}
-}{
-  \end{mdframed}
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \theoremstyle{break}
 \theoremseparator{}
 \theoremheaderfont{\osfamily \bfseries \upshape}
 \theorembodyfont{}
-   
+
 \theorempreskip{\skiparound}
 \theorempostskip{\skiparound}
 
@@ -141,6 +111,32 @@
 %\theoremstyle{margin}
 %\newtheorem{bemerkung}[themcount]{Bemerkung}
 
+%======================================================
+% SATZ
+
+\newmdtheoremenv[%
+	%style=boxedtheorem,%
+	backgroundcolor=cdblue!10,%
+	linecolor=cddarkblue!90,%
+	%innertopmargin=\boxskip,%
+	%innerbottommargin=\boxskip,%
+	innerleftmargin=4pt,%
+	outerlinewidth=5pt,%
+	topline=false,%
+	rightline=true,%
+	leftline=false,%
+	bottomline=false,%
+	%innertopmargin=3pt,%
+	%innerbottommargin=3pt,%
+	leftmargin=-4pt,%
+	%rightmargin=-10pt,%
+	%frametitlefont=\osfamily\bfseries,%
+	%skipabove=5pt,%
+	%skipbelow=5pt,%
+	skipabove=6pt,%
+	skipbelow=6pt,%
+	nobreak,%
+]{theorem}[thmcount]{Theorem}
 
 %======================================================
 % SATZ
@@ -167,14 +163,14 @@
 	skipabove=6pt,%
 	skipbelow=6pt,%
 	nobreak,%
-]{satz}[themcount]{Satz}
+]{satz}[thmcount]{Satz}
 
 %======================================================
 % LEMMA
 
 \newmdtheoremenv[%
 	%style=boxedtheorem,%
-	backgroundcolor=cdindigo!5,%
+	backgroundcolor=cdindigo!4,%
 	linecolor=cdindigo!50,%
 	%innertopmargin=\boxskip,%
 	%innerbottommargin=\boxskip,%
@@ -194,18 +190,18 @@
 	skipabove=6pt,%
 	skipbelow=6pt,%
 	nobreak,%
-]{lemma}[themcount]{Lemma}
+]{lemma}[thmcount]{Lemma}
 
 %======================================================
 % PROPOSITION
 
 \newmdtheoremenv[%
 	%style=boxedtheorem,%
-	%backgroundcolor=none,%
+	backgroundcolor=cdindigo!4,%
 	linecolor=cdindigo!50,%
 	%innertopmargin=\boxskip,%
 	%innerbottommargin=\boxskip,%
-	innerleftmargin=0pt,%
+	innerleftmargin=4pt,%
 	outerlinewidth=5pt,%
 	topline=false,%
 	rightline=true,%
@@ -213,7 +209,7 @@
 	bottomline=false,%
 	%innertopmargin=3pt,%
 	%innerbottommargin=3pt,%
-	%leftmargin=-10pt,%
+	leftmargin=-4pt,%
 	%rightmargin=-10pt,%
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
@@ -221,18 +217,18 @@
 	skipabove=6pt,%
 	skipbelow=6pt,%
 	nobreak,%
-]{proposition}[themcount]{Proposition}
+]{proposition}[thmcount]{Proposition}
 
 %======================================================
 % FOLGERUNG
 
 \newmdtheoremenv[%
 	%style=boxedtheorem,%
-	%backgroundcolor=none,%
+	backgroundcolor=cdpurple!4,%
 	linecolor=cdpurple,%
 	%innertopmargin=\boxskip,%
 	%innerbottommargin=\boxskip,%
-	innerleftmargin=0pt,%
+	innerleftmargin=4pt,%
 	outerlinewidth=5pt,%
 	topline=false,%
 	rightline=true,%
@@ -240,7 +236,7 @@
 	bottomline=false,%
 	%innertopmargin=3pt,%
 	%innerbottommargin=3pt,%
-	%leftmargin=-10pt,%
+	leftmargin=-4pt,%
 	%rightmargin=-10pt,%
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
@@ -248,17 +244,17 @@
 	skipabove=6pt,%
 	skipbelow=6pt,%
 	nobreak,%
-]{folgerung}[themcount]{Folgerung}
+]{folgerung}[thmcount]{Folgerung}
 
 %======================================================
 % KOROLLAR
 \newmdtheoremenv[%
 	%style=boxedtheorem,%
-	%backgroundcolor=none,%
+	backgroundcolor=cdpurple!5,%
 	linecolor=cdpurple,%
 	%innertopmargin=\boxskip,%
 	%innerbottommargin=\boxskip,%
-	innerleftmargin=0pt,%
+	innerleftmargin=4pt,%
 	outerlinewidth=5pt,%
 	topline=false,%
 	rightline=true,%
@@ -266,7 +262,7 @@
 	bottomline=false,%
 	%innertopmargin=3pt,%
 	%innerbottommargin=3pt,%
-	%leftmargin=-10pt,%
+	leftmargin=-4pt,%
 	%rightmargin=-10pt,%
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
@@ -274,7 +270,7 @@
 	skipabove=6pt,%
 	skipbelow=6pt,%
 	nobreak,%
-]{korollar}[themcount]{Korollar}
+]{korollar}[thmcount]{Korollar}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -304,7 +300,29 @@
 \theoremseparator{}
 \theoremindent0cm
 
-\newtheorem{*definition}{Definition}
+\newmdtheoremenv[%
+	%style=boxedtheorem,%
+	backgroundcolor=cdorange!10,%
+	linecolor=cdorange,%
+	%innertopmargin=\boxskip,%
+	%innerbottommargin=\boxskip,%
+	innerleftmargin=4pt,%
+	outerlinewidth=5pt,%
+	topline=false,%
+	rightline=true,%
+	leftline=false,%
+	bottomline=false,%
+	%innertopmargin=3pt,%
+	%innerbottommargin=3pt,%
+	leftmargin=-4pt,%
+	%rightmargin=-10pt,%
+	%frametitlefont=\osfamily\bfseries,%
+	%skipabove=5pt,%
+	%skipbelow=5pt,%
+	skipabove=6pt,%
+	skipbelow=6pt,%
+	nobreak,%
+]{*definition}{Definition}
 \newtheorem{*lemma}{Lemma}
 \newtheorem{*wiederholung}{Wiederholung}
 \newtheorem{*erinnerung}{Erinnerung}
