--- a/texmf/tex/latex/mathoperatorsMathTUD.sty
+++ b/texmf/tex/latex/mathoperatorsMathTUD.sty
@@ -39,7 +39,7 @@
 
 \newcommand{\brackets}[1]{\left( #1 \right)}
 \newcommand{\klammer}[1]{\left( #1 \right)}
-\newcommand{\sqbrackets}[1]{\left\{ #1 \right\}}
+\newcommand{\sqbrackets}[1]{\left[ #1 \right]}
 
 % >> sets and mappings
 \newcommand{\menge}[1]{\left\{ #1 \right\}}
@@ -239,6 +239,7 @@
 
 %%%%%% LMN
 \DeclareMathOperator{\Lin}{L}       % lineare Abbildungen
+\DeclareMathOperator{\lin}{lin}     % linear space
 \DeclareMathOperator{\LC}{LC}       % Leitkoeffizient
 
 \DeclareMathOperator{\Mat}{Mat}         % Matrix
